# cream-bots

./: .gitignore  README.md  ape-config.yaml  example-shell.text  pyproject.toml
src/cream_bots/: main.py
src/cream_bots/app/bots/: arb_bot.py  callback_bot.py  sniper_bot.py
src/cream_bots/app/bots/callback_bot/: callback_aggregator_service.py  callback_bot.py  callback_transaction_service.py
src/cream_bots/app/core/: aggregator_service.py  anvil_service.py  arbitrage_service.py  blacklist_service.py  bootstrap_service.py  event_service.py  exchange_service.py  pool_service.py  transaction_service.py
src/cream_bots/builders/: arb_builder.sh  arbs_2pool.py  arbs_3pool.py  liquidity_fetcher.py  liquidity_fetcher.sh  lp_fetcher.sh  lp_fetcher_v2.py  lp_fetcher_v3.py
src/cream_bots/config/: constants.py  contracts.py  helpers.py  logging.py
